fixes collapsing navbar for mobile

--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ body { background: #f5f7f6; }
 .navbar .nav li {  }
 .navbar .nav li a { padding: 8px 15px; color: #fff; font-weight: normal; }
 
-.btn-navbar { background: #4b81bf; margin-top: 3px; }
+.btn-navbar { background: #4b81bf; margin-top: 0; }
 
-.navbar h3 { margin: 0; font-weight: normal; font-size: 16px; padding-left: 15px; }
+.navbar h3 { margin: 0; font-weight: normal; font-size: 16px; padding-left: 15px; line-height: 50px; }
 .navbar h3 a { color: #fff; }
 
 .nav-collapse { display: none; background: #82b4de; }
@@ -182,7 +182,7 @@ body { background: #f5f7f6; }
 
     #home_spotlight { background-color: rgba(255,255,255,0.85); width: 300px; position: absolute; bottom: 30px; right: 0; padding: 30px; }
 
-    #home_secondary { 
+    #home_secondary {
         float: left;
         padding: 0px;
     }
